[workspace.package]
edition = "2021"
homepage = "https://www.wheretrue.dev/docs/exon/"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/wheretrue/exon"
version = "0.26.0"

[workspace]
members = [
  "exon-benchmarks",
  "exon/exon-cli",
  "exon-examples",
  "exon/exon-bam",
  "exon/exon-bcf",
  "exon/exon-bed",
  "exon/exon-common",
  "exon/exon-core",
  "exon/exon-cram",
  "exon/exon-fasta",
  "exon/exon-fastq",
  "exon/exon-fcs",
  "exon/exon-genbank",
  "exon/exon-gff",
  "exon/exon-gtf",
  "exon/exon-io",
  "exon/exon-mzml",
  "exon/exon-sam",
  "exon/exon-test",
  "exon/exon-vcf",
  "exon/exon-cram",
  "exon/exon-bigwig",
]
resolver = "2"

[workspace.dependencies]
arrow = { version = "52.0.0" }
async-trait = "0.1.80"
datafusion = { version = "39", features = ["compression", "parquet"] }
futures = "0.3"
noodles = { version = "0.77" }
object_store = { version = "0.10.1" }
tokio = { version = "1", features = ["io-util"] }
tokio-util = { version = "0.7.11", features = ["compat"] }
url = { version = "2.5.1" }
tracing = "0.1.40"

[profile.release]
codegen-units = 1
lto = true

[profile.profiling]
debug = true
inherits = "release"

[profile.quick-bench]
debug = true
inherits = "release"
lto = false
