[workspace.package]
edition = "2021"
homepage = "https://www.wheretrue.dev/docs/exon/"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/wheretrue/exon"
version = "0.32.1"

[workspace]
members = [
  "exon-benchmarks",
  "exon-examples",
  "exon/exon-bam",
  "exon/exon-bcf",
  "exon/exon-bed",
  "exon/exon-bigwig",
  "exon/exon-cli",
  "exon/exon-common",
  "exon/exon-core",
  "exon/exon-cram",
  "exon/exon-cram",
  "exon/exon-fasta",
  "exon/exon-fastq",
  "exon/exon-fcs",
  "exon/exon-genbank",
  "exon/exon-gff",
  "exon/exon-gtf",
  "exon/exon-io",
  "exon/exon-mzml",
  "exon/exon-sam",
  "exon/exon-sdf",
  "exon/exon-test",
  "exon/exon-vcf",
]
resolver = "2"

[workspace.dependencies]
arrow = { version = "52.2.0" }
async-trait = "0.1.82"
datafusion = { version = "41", features = ["compression", "parquet"] }
futures = "0.3"
noodles = { version = "0.79" }
object_store = { version = "0.10.2" }
tokio = { version = "1", features = ["io-util"] }
tokio-util = { version = "0.7.11", features = ["compat"] }
url = { version = "2.5.2" }
tracing = "0.1.40"

[profile.release]
codegen-units = 1
lto = true

[profile.profiling]
debug = true
inherits = "release"

[profile.quick-bench]
debug = true
inherits = "release"
lto = false
