[package]
description = "Executable benchmarks for exon"
edition = "2021"
homepage = { workspace = true }
keywords = ["exon", "bioinformatics", "rust"]
license = { workspace = true }
name = "exon-benchmarks"
readme = "README.md"
version.workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
datafusion = { workspace = true }
exon = { path = "../exon/exon-core", features = ["all"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3.18"
