[package]
description = "Exon CLI"
edition = "2021"
name = "exon-cli"
version = "0.3.4-beta.11"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.4.7", features = ["derive"]}
datafusion.workspace = true
exon = {path = "../exon/exon-core", features = ["all"], version = "0.3.4-beta.11"}
tokio = {version = "1.33.0", features = ["io-util"]}
url = "2.4.1"
