[package]
description = "Exon CLI"
edition = "2021"
name = "exon-cli"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.4.8", features = ["derive"]}
datafusion.workspace = true
exon = {path = "../exon/exon-core", features = ["all"]}
tokio = {version = "1.34.0", features = ["io-util"]}
url = "2.4.1"
