[package]
edition = "2021"
name = "exon-examples"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = {workspace = true}
datafusion = {workspace = true}
exon = {path = "../exon"}
tokio = {version = "1", features = ["io-util"]}
