[package]
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "exon-py"
readme.workspace = true
repository.workspace = true
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "exonpy"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies.pyo3]
features = ["abi3-py39"]
version = "0.19.2"
