[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "Trent Hauck", email = "trent@trenthauck.com"},
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  'adbc_driver_flightsql==0.8.0',
  'pyarrow==14.0.1',
  'grpcio==1.59.3',
  'protobuf==4.25.1',
]
description = ''
dynamic = ["version"]
keywords = []
license = "MIT"
name = "exon-py"
readme = "README.md"
requires-python = ">=3.9"

[project.urls]
Documentation = "https://github.com/unknown/exon-py#readme"
Issues = "https://github.com/unknown/exon-py/issues"
Source = "https://github.com/unknown/exon-py"

[tool.hatch.version]
path = "exon_py/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
cov = [
  "test-cov",
  "cov-report",
]
cov-report = [
  "- coverage combine",
  "coverage report",
]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"

[[tool.hatch.envs.all.matrix]]
python = ["3.7", "3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.lint]
dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]
detached = true
[tool.hatch.envs.lint.scripts]
all = [
  "style",
  "typing",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
typing = "mypy --install-types --non-interactive {args:exon_py tests}"

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ["py312"]

[tool.ruff]
exclude = [
  "exon_py/proto/*",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027", # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003", # Ignore checks for possible passwords
  "S105",
  "S106",
  "S107", # Ignore complexity
  "C901",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
  "B904",
]
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
target-version = "py312"
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["exon_py"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
branch = true
omit = [
  "exon_py/__about__.py",
]
parallel = true
source_pkgs = ["exon_py", "tests"]

[tool.coverage.paths]
exon_py = ["exon_py", "*/exon-py/exon_py"]
tests = ["tests", "*/exon-py/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
