[package]
description = "A platform for scientific data processing and analysis."
edition = "2021"
homepage = {workspace = true}
keywords = ["biology", "science", "arrow"]
license = {workspace = true}
name = "exon"
readme = {workspace = true}
version = "0.2.5"

[dependencies]
arrow = {workspace = true}
async-trait = "0.1.70"
aws-config = {version = "0.55.3", optional = true}
aws-credential-types = {version = "0.55.3", optional = true}
base64 = {version = "0.21", optional = true}
byteorder = {version = "1.4.3", optional = true}
bytes = "1.4.0"
datafusion = {workspace = true}
flate2 = {version = "1.0.25", optional = true}
futures = "0.3.28"
gb-io = {version = "0.7.1", optional = true}
noodles = {version = "0.44", features = ["bed", "tabix", "core", "async", "fasta", "bam", "sam", "fastq", "gff", "bcf", "vcf", "bgzf", "csi", "gtf"]}
object_store = {workspace = true}
pin-project = {version = "1.1.0", optional = true}
quick-xml = {version = "0.29.0", features = ["async-tokio", "serialize", "overlapped-lists"], optional = true}
serde = {version = "1", features = ["derive"], optional = true}
tokio = {version = "1", features = ["io-util"]}
tokio-util = {version = "0.7.8", features = ["compat"]}
url = {version = "2.4.0", optional = true}

[features]
all = [
  "aws",
  "ffi",
  "gcp",
  "genbank",
  "mzml",
]
aws = ["object_store/aws", "dep:aws-config", "dep:aws-credential-types", "dep:url"]
fcs = ["dep:byteorder"]
ffi = ["arrow/ffi", "dep:pin-project"]
gcp = ["object_store/gcp", "dep:url"]
genbank = ["dep:gb-io"]
mzml = ["dep:base64", "dep:flate2", "dep:quick-xml", "dep:serde", "dep:byteorder"]
