[package]
description = "A platform for scientific data processing and analysis."
edition = "2021"
exclude = [
  "test-data/*",
]
homepage = {workspace = true}
keywords = ["biology", "science", "arrow"]
license = {workspace = true}
name = "exon"
readme = {workspace = true}
version = "0.3.1"

[dependencies]
arrow = {workspace = true}
async-trait = "0.1.73"
aws-config = {version = "0.56.1", optional = true}
aws-credential-types = {version = "0.56.0", optional = true}
base64 = {version = "0.21", optional = true}
byteorder = {version = "1.4.3", optional = true}
bytes = "1.5.0"
datafusion = {workspace = true}
flate2 = {version = "1.0.27", optional = true}
futures = "0.3.28"
gb-io = {version = "0.7.1", optional = true}
itertools = "0.11.0"
noodles = {version = "0.50", features = ["bed", "tabix", "core", "async", "fasta", "bam", "sam", "fastq", "gff", "bcf", "vcf", "bgzf", "csi", "gtf"]}
num_cpus = "1.16.0"
object_store = {workspace = true}
parking_lot = "0.12.1"
pin-project = {version = "1.1.3", optional = true}
prost = {version = "0.12.0", optional = true}
quick-xml = {version = "0.30.0", features = ["async-tokio", "serialize", "overlapped-lists"], optional = true}
serde = {version = "1", features = ["derive"], optional = true}
tokio = {version = "1", features = ["io-util"]}
tokio-util = {version = "0.7.8", features = ["compat"]}
tonic = {version = "0.10.0", optional = true}
tracing = "0.1.37"
url = {version = "2.4.1", optional = true}

[dev-dependencies]
sqllogictest = "0.15.3"

[features]
all = ["aws", "ffi", "gcp", "genbank", "mzml"]
aws = ["object_store/aws", "dep:aws-config", "dep:aws-credential-types", "dep:url"]
exome = ["dep:prost", "dep:tonic", "dep:url"]
fcs = ["dep:byteorder"]
ffi = ["arrow/ffi", "dep:pin-project"]
gcp = ["object_store/gcp", "dep:url"]
genbank = ["dep:gb-io"]
mzml = ["dep:base64", "dep:flate2", "dep:quick-xml", "dep:serde", "dep:byteorder"]

[[test]]
harness = false
name = "sqllogictests"
path = "tests/sqllogictests/src/main.rs"
