[package]
description = "A platform for scientific data processing and analysis."
edition = "2021"
homepage = "https://www.github.com/wheretrue/tca"
license = "Apache-2.0"
name = "tca"
repository = "https://www.github.com/wheretrue/tca"
version = "0.1.1-alpha.4"

[dependencies]
arrow = {version = "41.0.0"}
async-trait = "0.1.68"
base64 = {version = "0.21", optional = true}
byteorder = {version = "1.4.3", optional = true}
bytes = "1.4.0"
datafusion = {git = "https://github.com/apache/arrow-datafusion.git", features = ["default"]}
flate2 = {version = "1.0.25", optional = true}
futures = "0.3.28"
gb-io = {version = "0.7.1"}
noodles = {version = "0.38.0", features = ["bed", "core", "async", "fasta", "bam", "sam", "fastq", "gff", "bcf", "vcf", "bgzf"]}
object_store = {version = "0.6.1"}
pin-project = {version = "1.1.0", optional = true}
quick-xml = {version = "0.28.2", features = ["async-tokio", "serialize", "overlapped-lists"], optional = true}
serde = {version = "1", features = ["derive"], optional = true}
tokio = {version = "1", features = ["io-util"]}
tokio-util = {version = "0.7.8", features = ["compat"]}

[features]
all = ["ffi", "mzml"]
ffi = ["arrow/ffi", "dep:pin-project"]
mzml = ["dep:base64", "dep:byteorder", "dep:flate2", "dep:quick-xml", "dep:serde"]
