[package]
description = "Exon BAM"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "exon-bam"
readme.workspace = true
repository.workspace = true
version = { workspace = true }

[dependencies]
arrow = { workspace = true }
exon-common = { path = "../exon-common", version = "0.24.0" }
exon-sam = { path = "../exon-sam", version = "0.24.0" }
futures = { workspace = true }
itertools = "0.13"
noodles = { workspace = true, features = [
  "core",
  "async",
  "bam",
  "sam",
  "bgzf",
] }
object_store = { workspace = true }
tokio = { workspace = true }
