[package]
description = "Exon BCF"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "exon-bcf"
readme.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = { workspace = true }
exon-common = { path = "../exon-common", version = "0.32.3" }
exon-vcf = { path = "../exon-vcf", version = "0.32.3" }
futures = { workspace = true }
noodles = { workspace = true, features = ["core", "async", "bcf", "bgzf"] }
object_store = { workspace = true }
tokio = { workspace = true }
