[package]
description = "Subcrate of the `exon` crate for working with BED files."
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "exon-bed"
readme.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = {workspace = true}
exon-common = {path = "../exon-common", version = "0.4.1"}
futures = {workspace = true}
noodles = {workspace = true, features = ["bed", "core"]}
object_store = {workspace = true}
tokio = {workspace = true}
tokio-util = {workspace = true}
