[package]
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "exon-cli"
readme.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4", features = ["derive", "cargo"]}
datafusion = {workspace = true}
datafusion-cli = {version = "35.0.0"}
exon = {path = "../exon-core", version = "0.8.2"}
tokio = {workspace = true}
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
