[package]
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "exon-cli"
readme.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datafusion-cli = { version = "41" }
clap = { version = "4", features = ["derive", "cargo"] }
datafusion = { workspace = true }
object_store = { workspace = true }
exon = { path = "../exon-core", version = "0.32.2", features = ["default"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = { workspace = true }
async-trait = { workspace = true }
