[package]
description = "A platform for scientific data processing and analysis."
edition = "2021"
exclude = ["test-data/*"]
homepage = { workspace = true }
repository = { workspace = true }
keywords = ["biology", "science", "arrow"]
license = { workspace = true }
name = "exon"
readme = { workspace = true }
version.workspace = true

[dependencies]
arrow = { workspace = true }
async-trait = { workspace = true }
bytes = "1.6.1"
datafusion = { workspace = true }
exon-bam = { path = "../exon-bam", version = "0.27.1" }
exon-sdf = { path = "../exon-sdf", version = "0.27.1" }
exon-bcf = { path = "../exon-bcf", version = "0.27.1" }
exon-bed = { path = "../exon-bed", version = "0.27.1" }
exon-cram = { path = "../exon-cram", version = "0.27.1" }
exon-common = { path = "../exon-common", version = "0.27.1" }
exon-fasta = { path = "../exon-fasta", version = "0.27.1" }
exon-fastq = { path = "../exon-fastq", version = "0.27.1" }
exon-fcs = { path = "../exon-fcs", version = "0.27.1", optional = true }
exon-genbank = { path = "../exon-genbank", version = "0.27.1", optional = true }
exon-gff = { path = "../exon-gff", version = "0.27.1" }
exon-gtf = { path = "../exon-gtf", version = "0.27.1" }
exon-io = { path = "../exon-io", version = "0.27.1" }
exon-mzml = { path = "../exon-mzml", version = "0.27.1", optional = true }
exon-sam = { path = "../exon-sam", version = "0.27.1" }
exon-vcf = { path = "../exon-vcf", version = "0.27.1" }
exon-bigwig = { path = "../exon-bigwig", version = "0.27.1" }
futures = { workspace = true }
itertools = "0.13"
noodles = { workspace = true, features = [
  "bed",
  "tabix",
  "core",
  "async",
  "bcf",
  "vcf",
  "bgzf",
  "csi",
  "gtf",
] }
num_cpus = "1.16.0"
object_store = { workspace = true, features = ["aws"] }
pin-project = { version = "1.1.5", optional = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3.18"
url = { workspace = true }
fxhash = "0.2.1"
lazy_static = "1.5.0"
serde = { version = "1.0.204", features = ["derive"] }
regex = "1.10.5"
lightmotif = { version = "0.8.0", optional = true }
lightmotif-io = { version = "0.8.0", optional = true }
coitrees = "0.4.0"

[dev-dependencies]
exon-test = { path = "../exon-test" }
sqllogictest = "0.21.0"
clap = { version = "4", features = ["derive", "env"] }

[features]
all = ["ffi", "genbank", "mzml", "fcs", "motif-udfs"]
default = ["ffi", "genbank", "mzml", "fcs"]
fcs = ["dep:exon-fcs"]
ffi = ["arrow/ffi", "dep:pin-project"]
fixtures = []
genbank = ["dep:exon-genbank"]
mzml = ["dep:exon-mzml"]
motif-udfs = ["dep:lightmotif", "dep:lightmotif-io"]

[[test]]
harness = false
name = "sqllogictests"
path = "tests/sqllogictests/src/main.rs"
