[package]
description = "Exon CRAM"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "exon-cram"
readme.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = { workspace = true }
coitrees = "0.4.0"
exon-common = { path = "../exon-common", version = "0.22.1" }
exon-sam = { path = "../exon-sam", version = "0.22.1" }
futures = { workspace = true }
noodles = { workspace = true, features = ["core", "async", "cram", "fasta"] }
object_store = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
