[package]
description = "Exon X Exome"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "exon-exome"
readme.workspace = true
repository.workspace = true
version = "0.3.4-beta.5"

[dependencies]
arrow = {workspace = true}
async-trait = {workspace = true}
datafusion = {workspace = true}
exon = {path = "../exon-core", version = "0.3.4-beta.5"}
futures = {workspace = true}
once_cell = "1.18.0"
prost = {version = "0.12.1"}
tokio = {workspace = true}
tonic = {version = "0.9.2", features = ["tls", "tls-roots"]}
url = {workspace = true}
