[package]
description = "Exon X Exome"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "exon-exome"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
arrow = {workspace = true}
async-trait = {workspace = true}
datafusion = {workspace = true}
exon = {path = "../exon-core", version = "0.5.3"}
futures = {workspace = true}
once_cell = "1.19.0"
prost = {version = "0.11.9"}
tokio = {workspace = true}
tonic = {version = "0.9.2", features = ["tls", "tls-roots"]}
tracing = {version = "0.1.37"}
url = {workspace = true}
