[package]
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "exon-fasta"
readme.workspace = true
repository.workspace = true
version = "0.3.4-beta.5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = {workspace = true}
futures = {workspace = true}
itertools = "0.11.0"
noodles = {version = "0.53", features = ["core", "async", "fasta"]}
object_store = {workspace = true}
tokio = {workspace = true}
tokio-util = {workspace = true}

[dev-dependencies]
exon-test = {path = "../exon-test"}
