[package]
description = "A library for reading and writing FASTA files with Exon."
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "exon-fasta"
readme.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = {workspace = true}
exon-common = {path = "../exon-common", version = "0.5.0"}
futures = {workspace = true}
itertools = "0.12.0"
noodles = {workspace = true, features = ["core", "async", "fasta"]}
object_store = {workspace = true}
tokio = {workspace = true}
tokio-util = {workspace = true}

[dev-dependencies]
exon-test = {path = "../exon-test"}
