[package]
description = "FASTQ support for Exon."
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "exon-fastq"
readme.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = { workspace = true }
exon-common = { path = "../exon-common", version = "0.19.0" }
futures = { workspace = true }
noodles = { workspace = true, features = ["async", "fastq"] }
object_store = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
