[package]
description = "Exon FCS"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "exon-fcs"
readme.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = { workspace = true }
byteorder = { version = "1.5.0" }
exon-common = { path = "../exon-common", version = "0.22.0" }
futures = { workspace = true }
object_store = { workspace = true }
tokio = { workspace = true, features = ["fs"] }

[dev-dependencies]
exon-test = { path = "../exon-test" }
