[package]
description = "Exon GenBank"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "exon-genbank"
readme.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = { workspace = true }
exon-common = { path = "../exon-common", version = "0.16.3" }
futures = { workspace = true }
gb-io = { version = "0.7.1" }
object_store = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
exon-test = { path = "../exon-test" }
